Fix tags popover menu visibility.
#134

--- a/sources/stylesheets/general/_base.scss
+++ b/sources/stylesheets/general/_base.scss
@@ -242,10 +242,6 @@ a {
   }
 }
 
-.main-inner-row {
-  overflow: hidden;
-}
-
 .dark-background {
   color: rgba($white, 1);
 
