--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -326,10 +326,6 @@ a img {
   }
 }
 
-.main-inner-row {
-  overflow: hidden;
-}
-
 .dark-background {
   color: white;
 }
